<resources xmlns:tools="http://schemas.android.com/tools">
    ...
    //home
    <string name="app_name">ELS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english_learning_simple">English Learning Simple</string>
    <string name="learning_by_playing">Learning by playing is the best</string>
    <string name="listening">Listening</string>
    <string name="reading">Reading</string>
    <string name="newspaper">Newspaper</string>
    <string name="writing">Writing</string>
    <string name="heading_on_boarding_1">Hundred self-learn courses for 4 skills</string>
    <string name="heading_on_boarding_2">Speaking practice with friends from all over the world</string>
    <string name="heading_on_boarding_3">Practice English by playing games</string>
    <string name="undone">Undone</string>
    <string name="done">Done</string>
    <string name="totalDuration">%d minutes</string>
    <string name="totalLesson">%d lessons</string>
    <string name="percentage">%d%%</string>
    <string name="opps_there_is_nothing_here">Opps! There is nothing here</string>
    <string name="yeah_you_have_completed_this_course_n_pick_up_another">Yeah! Course is completed</string>
    <string name="course_under_maintenance">Course under maintenance!</string>
    <string name="notification">Notification</string>
    <string name="no_notification_yet">No notification yet</string>
    <string name="lessons">Lessons</string>
    <string name="meetings">Meetings</string>
    <string name="games">Games</string>

    <!--    personal-->
    <string name="personal">My profile</string>
    <string name="university">University</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="edit_info">Edit Info.</string>
    <string name="submit">Submit</string>
    <string name="achievement">Achievement</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="could_you_tell_me_what_your_name_is">Could you tell me what your name is?</string>
    <string name="save">Save</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="choose_your_age">Choose your age</string>
    <string name="_18"><![CDATA[< 18]]></string>
    <string name="_18_24">18 - 24</string>
    <string name="_25_34">25 - 34</string>
    <string name="_34_44">34 - 44</string>
    <string name="_45_54">45 - 54</string>
    <string name="_55"><![CDATA[>= 55]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="choose_your_career">Choose your career</string>
    <string name="worker">Worker</string>
    <string name="college_student">College student</string>
    <string name="student">Student</string>
    <string name="freelancer">Freelancer</string>
    <string name="career">Career</string>

    //authentication
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="_84">+84 -</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="request_otp">Request OTP</string>
    <string name="sign_up_text">You will receive 6 digit code for verification</string>
    <string name="sign_up">SIGN UP</string>
    <string name="verify">Verify</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="logo">Logo</string>
    <string name="new_to_els">New to ELS?</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="log_in2">LOG IN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="space" />
    <string name="learning_by_n_playing">Learning by \nplaying</string>
    <string name="learning_by_playing_is_the_best">Learning by playing is the best!</string>
    <string name="word_quiz">Word quiz</string>
    <string name="word_choice">Word choice</string>
    <string name="word_arrangement">Word arrangement</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="dictionary">Dictionary</string>
    <string name="dictionary_tv">Dictionary</string>
    <string name="search_new_words">Search</string>

    // Games fragment
    <string name="instruction">Choose the word that is related to: </string>
    <string name="choose_right_word">Choose right word</string>
    <string name="choose_synonyms">Choose synonyms</string>
    <string name="rearrange_words">Rearrange words</string>
    <string name="current_question">QUESTION %d OUT OF %d</string>
    <string name="current_score">Your score: %d/100</string>
    <string name="quiz_content">%s \n%s \n%s</string>
    <string name="first_answer">A. %s</string>
    <string name="second_answer">B. %s</string>
    <string name="skip_this_quiz"><u>Skip this quiz</u></string>
    <string name="congratulations">Congratulations</string>
    <string name="score">%d/100</string>
    <string name="did_great_job">Yay! You did a great job!</string>
    <string name="continue_to_exit">Continue</string>
    <string name="exit_warning">You want to exit? Your progress will be lost!</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="level"><u>Level: %d</u></string>
    <string name="area"><u>Area: %s</u></string>
    <string name="let_play">Let\'s play</string>

    // Game level and area
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="toeic">TOEIC</string>
    <string name="ielts">IELTS</string>
    <string name="toefl">TOEFL</string>
    <string name="overall">Overall</string>
    <string name="sat">SAT</string>
    <string name="history">History</string>
    <string name="average_score">Average score</string>
    <string name="d_10">%d/10</string>
    <string name="play_times">Play times</string>
    <string name="play_time">%d</string>
    <string name="best_score">Best score</string>
    <string name="history_item_title"><![CDATA[Area: %s level: %d]]></string>


    <string name="grammar1">""</string>
    <string name="grammar2"></string>
    <string name="grammar3"></string>
    <string name="grammar4"></string>
    <string name="grammar5"></string>
    <string name="grammar6"></string>
    <string name="grammar7"></string>
    <string name="grammar8"></string>
    <string name="grammar9"></string>
    <string name="grammar10"></string>

</resources>