<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".fragment.personal.InformationPositionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        android:orientation="vertical"
        tools:context=".InformationNameActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/personal_layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/personal_edit_info_career_back"
                android:layout_width="@dimen/buttonSize"
                android:layout_height="@dimen/buttonSize"
                android:layout_margin="@dimen/smallPadding"
                android:backgroundTint="@color/s_light"
                android:gravity="center"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:cornerRadius="@dimen/smallCardCornerRadius"
                app:icon="@drawable/ic_arrow_back"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="@dimen/mediumIconSize"
                app:iconTint="@color/primary_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/largePadding"
                android:text="@string/edit_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/personal_background"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/largePadding"
            android:paddingTop="@dimen/largePadding">

            <TextView
                android:id="@+id/personal_edit_info_gender_choose_your_career"
                style="@style/Personal_edit_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/largePadding"
                android:text="@string/choose_your_career">


            </TextView>

            <RadioGroup
                android:id="@+id/personal_edit_info_gender_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/personal_edit_info_gender_choose_your_career"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    style="@style/Personal_edit_info_radio_button"
                    android:text="@string/worker"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    style="@style/Personal_edit_info_radio_button"
                    android:text="@string/college_student" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    style="@style/Personal_edit_info_radio_button"
                    android:text="@string/student"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    style="@style/Personal_edit_info_radio_button"
                    android:text="@string/freelancer"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    style="@style/Personal_edit_info_radio_button"
                    android:text="@string/other"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_btn"
                style="@style/Personal_save_button"
                android:layout_alignParentBottom="true"
                android:layout_marginVertical="@dimen/mediumPadding"
                android:text="@string/save" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>