<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.games.CongratulationFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/firework"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_gravity="center"
            android:src="@drawable/trophy"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/congratulations"
            android:textColor="@color/text_on_s"
            android:textSize="@dimen/header1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/did_great_job"
            android:textColor="@color/s_dark"
            android:textSize="@dimen/bodyText1" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/score"
            android:textColor="@color/primary"
            android:textSize="@dimen/header1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mediumPadding"
            android:height="@dimen/_50sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/continue_to_exit"
            android:textAllCaps="false"
            android:textSize="@dimen/bodyText1"
            app:cornerRadius="@dimen/largeCardCornerRadius" />
    </LinearLayout>
</FrameLayout>