<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.authentication.LoginFragment">
    
    <data>
        <variable
            name="LoginViewmodel"
            type="com.example.els.viewmodel.authentication.LoginViewmodel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/dark"
            android:textSize="36sp"
            android:fontFamily="@font/pacifico"
            android:gravity="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/text_below_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_account_here"
            android:textColor="@color/dark"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="30dp"
            android:id="@+id/email"
            android:hint="@string/email"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/dark"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            android:layout_gravity="center"
            app:startIconTint="@color/dark"
            app:startIconDrawable="@drawable/ic_email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="20dp"
            android:id="@+id/password"
            android:hint="@string/password"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/dark"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            android:layout_gravity="center"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark"
            app:startIconTint="@color/dark"
            app:startIconDrawable="@drawable/ic_lock">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:paddingRight="30dp"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="310dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_primary"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="OR"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/phoneLogin"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_56sdp"
                android:src="@drawable/ic_phone"
                android:elevation="@dimen/_5sdp"
                android:background="@drawable/roundedbutton"/>

            <ImageButton
                android:id="@+id/ggLogin"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:layout_gravity="end"
                android:src="@drawable/ic_gg"
                android:elevation="@dimen/_5sdp"
                android:background="@drawable/roundedbutton"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewSignup"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_els"
                android:layout_gravity="center"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/signupTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="onClick"
                android:clickable="true"/>

        </LinearLayout>

    </LinearLayout>

</layout>